--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
+    "express-slow-down": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   }
